--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -360,5 +360,37 @@
     "after_confirming":"After confirming the reservation, you can see the service voucher in my reservation page or via email",
     "when_coming":"When coming, just submit the service on the phone for the staff at the entrance is done",
     "no_need_print_card":"No need to print payment cards",
-    "just_present_electronic":"Just present the electronic ticket/payment card on your phone when converted or entered the door. Please adjust the appropriate screen brightness."
+    "just_present_electronic":"Just present the electronic ticket/payment card on your phone when converted or entered the door. Please adjust the appropriate screen brightness.",
+    "how_to_change":"How to change the vote",
+    "present_voucher":"Present voucher on your phone or print, along with your passport/ID to exchange gifts for the tour operator.",
+    "you_must":"You must be willing to take part in the tour and the gathering place has scheduled. If you are not present at the time and place of the meeting, you will be left behind and your reservation will be considered invalid. You can ask for a schedule based on the approval of the tour operator and the space on the day you have chosen.",
+    "please_note":" Please note that only your Traveloka payment card is valid for entry. Payment receipts or payment evidence cannot be used for admission.",
+    "conversion":"Conversion",
+    "refund_and_change":"Refund and change calendar",
+    "can_change_calendar":"Can change the calendar in my reservation page before the selected date of arrival.",
+    "can_be_fully":"Can be fully refunded",
+    "it_is_only":" It is only possible to request a refund process before the selection date. See the refund policy below for more information.",
+    "calendar_change":"Calendar Change Policy",
+    "you_can_only":"You can only change your booking schedule up to 2 times.",
+    "require_of_schedule":"Requirement of a schedule can be done up to 1 day before the selected visit date.",
+    "your_rearrangement":"Your rearrangement schedule will apply to all guests in 1 reservation code.",
+    "you_can_schedule":"You can schedule your reservation to any day available in the period from the date of issuance of the voucher until after 14 days from the date of your original sightseeing. Please note that you can only change the calendar to another day than the same price or lower than your original reservation.",
+    "the_scheduling":"The scheduling reservation will not be refunded.",
+    "refund_policy":"Refund policy",
+    "requirement_for_refund":"Requirement for the latest 2 days before your choice to receive 100% refund.",
+    "your_reservation":"Your reservation will not be refunded if you ask for a refund of. less than 2 days before the selected date.",
+    "the_final_refund":"The final refund will not include service fee, coupon and / or a single bank transfer fee.",
+    "to_cancel_reservation":"To cancel your reservation and ask for a refund, please visit my reservation item. In the reservation management section, touch the refund and follow the refund process (available on the Traveloka application version 3.18 or higher or the Traveloka website on the computer).",
+    "term_condition":"Term & condition",
+    "there_is_surcharge":" There is a surcharge of THB 1000 for tours operating during the New Year period and Songkran period. Please pay additional fees directly to the tour operator.",
+    "all_travelers":"All travelers must carry identification (or passport) with them at all times.",
+    "child_ticket":"Child tickets apply to children from 4 to 11 years old or 120cm or less in height.",
+    "adult_ticket":"Adult tickets apply to people from 12 to 60 years old or over 120cm tall.",
+    "infants_under":"Infants under 1 year old, seniors over 60 years old, and pets are not allowed on the tour.",
+    "guest_with_high":"Guests with high blood pressure, heart disease, pregnancy, asthma, and bone or orthopedic diseases are not allowed to participate in this tour.",
+    "you_are_allergic":"If you are allergic to a particular food, please let the operator know before travelling.",
+    "this_activity":"This activity is not suitable for children under 2 years old, pregnant women, or people with medical conditions or disabilities.",
+    "foreigners_must":"Foreigners must apply for an E-Visa via  and submit the approved visa to the agency 7 days before the travel date.",
+    "you_plan_to":"If you plan to travel during a major festival, you should book tickets at least a month in advance.",
+    "itineraries_time":"Itineraries and times above are approximate and may be amended without notice to suit local tides and weather conditions."
 }
