--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -357,5 +357,37 @@
 "after_confirming": "Setelah mengonfirmasi reservasi, Anda dapat melihat voucher layanan di halaman reservasi saya atau melalui email",
 "when_coming": "Saat datang, cukup serahkan layanan di telepon untuk staf di pintu masuk",
 "no_need_print_card": "Tidak perlu mencetak kartu pembayaran",
-"just_present_electronic": "Hanya persembahkan tiket/ kartu pembayaran elektronik di telepon Anda saat dikonversi atau memasuki pintu. Mohon atur kecerahan layar yang sesuai."
+"just_present_electronic": "Hanya persembahkan tiket/ kartu pembayaran elektronik di telepon Anda saat dikonversi atau memasuki pintu. Mohon atur kecerahan layar yang sesuai.",
+"how_to_change": "Bagaimana cara mengubah pilihan",
+"present_voucher": "Tunjukkan voucher di ponsel Anda atau cetak, bersama dengan paspor/KTP Anda untuk menukarkan hadiah dengan operator tur.",
+"you_must": "Anda harus bersedia untuk mengikuti tur dan tempat pertemuan sudah dijadwalkan. Jika Anda tidak hadir pada waktu dan tempat pertemuan, Anda akan ditinggalkan dan reservasi Anda dianggap tidak valid. Anda dapat meminta jadwal berdasarkan persetujuan dari operator tur dan ruang pada hari yang Anda pilih.",
+"please_note": "Harap perhatikan bahwa hanya kartu pembayaran Traveloka Anda yang valid untuk masuk. Bukti pembayaran atau bukti pembayaran tidak dapat digunakan untuk masuk.",
+"conversion": "Konversi",
+"refund_and_change": "Pengembalian dana dan perubahan kalender",
+"can_change_calendar": "Dapat mengubah kalender di halaman pemesanan saya sebelum tanggal kedatangan yang dipilih.",
+"can_be_fully": "Dapat dikembalikan sepenuhnya",
+"it_is_only": "Hanya memungkinkan untuk meminta proses pengembalian dana sebelum tanggal pemilihan. Lihat kebijakan pengembalian dana di bawah ini untuk informasi lebih lanjut.",
+"calendar_change": "Kebijakan Perubahan Kalender",
+"you_can_only": "Anda hanya dapat mengubah jadwal pemesanan Anda hingga 2 kali.",
+"require_of_schedule": "Persyaratan jadwal dapat dilakukan hingga 1 hari sebelum tanggal kunjungan yang dipilih.",
+"your_rearrangement": "Jadwal pengaturan ulang Anda akan berlaku untuk semua tamu dalam 1 kode pemesanan.",
+"you_can_schedule": "Anda dapat menjadwalkan reservasi Anda ke hari apa pun yang tersedia dalam periode dari tanggal penerbitan voucher hingga setelah 14 hari dari tanggal wisata asli Anda. Harap dicatat bahwa Anda hanya dapat mengubah kalender ke hari lain dengan harga yang sama atau lebih rendah dari reservasi asli Anda.",
+"the_scheduling": "Reservasi penjadwalan tidak akan dikembalikan.",
+"refund_policy": "Kebijakan Pengembalian Dana",
+"requirement_for_refund": "Persyaratan untuk paling lambat 2 hari sebelum pilihan Anda untuk menerima pengembalian dana 100%.",
+"your_reservation": "Reservasi Anda tidak akan dikembalikan jika Anda meminta pengembalian dana kurang dari 2 hari sebelum tanggal yang dipilih.",
+"the_final_refund": "Pengembalian dana terakhir tidak termasuk biaya layanan, kupon, dan/atau biaya transfer bank tunggal.",
+"to_cancel_reservation": "Untuk membatalkan reservasi Anda dan meminta pengembalian dana, silakan kunjungi barang reservasi saya. Di bagian manajemen reservasi, sentuh pengembalian dana dan ikuti proses pengembalian dana (tersedia pada aplikasi Traveloka versi 3.18 atau lebih tinggi atau situs web Traveloka di komputer).",
+"term_condition": "Syarat & Ketentuan",
+"there_is_surcharge": "Ada biaya tambahan sebesar THB 1000 untuk tur yang beroperasi selama periode Tahun Baru dan Songkran. Silakan bayar biaya tambahan langsung kepada operator tur.",
+"all_travelers": "Semua wisatawan harus membawa identifikasi (atau paspor) dengan mereka setiap saat.",
+"child_ticket": "Tiket anak berlaku untuk anak-anak usia 4 hingga 11 tahun atau tinggi kurang dari 120cm.",
+"adult_ticket": "Tiket dewasa berlaku untuk orang dewasa berusia 12 hingga 60 tahun atau lebih dari 120cm.",
+"infants_under": "Bayi di bawah 1 tahun, lansia di atas 60 tahun, dan hewan peliharaan tidak diizinkan dalam tur.",
+"guest_with_high": "Tamunya dengan tekanan darah tinggi, penyakit jantung, kehamilan, asma, dan penyakit tulang atau ortopedi tidak diizinkan untuk berpartisipasi dalam tur ini.",
+"you_are_allergic": "Jika Anda alergi terhadap makanan tertentu, harap beri tahu operator sebelum melakukan perjalanan.",
+"this_activity": "Aktivitas ini tidak cocok untuk anak di bawah 2 tahun, wanita hamil, atau orang dengan kondisi medis atau cacat.",
+"foreigners_must": "Warga asing harus mengajukan E-Visa melalui  dan mengirimkan visa yang disetujui ke agen 7 hari sebelum tanggal perjalanan.",
+"you_plan_to": "Jika Anda berencana melakukan perjalanan selama festival besar, Anda harus memesan tiket setidaknya sebulan sebelumnya.",
+"itineraries_time": "Itinerary dan waktu di atas adalah perkiraan dan dapat diubah tanpa pemberitahuan untuk menyesuaikan dengan pasang surut dan kondisi cuaca setempat."
 }
