--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -352,5 +352,38 @@
 "after_confirming": "Pagkumpirmahin ang reservation, maaari mong makita ang voucher ng serbisyo sa aking pahina ng reservation o sa pamamagitan ng email",
 "when_coming": "Kapag dumating, magsumite lamang ng serbisyo sa telepono para sa mga tauhan sa pinto",
 "no_need_print_card": "Hindi kailangang i-print ang mga card ng pagbabayad",
-"just_present_electronic": "I-present lamang ang elektronikong tiket/card sa iyong telepono kapag nag-convert o pumasok sa pinto. Paki-ayos lamang ang angkop na liwanag ng screen."
+"just_present_electronic": "I-present lamang ang elektronikong tiket/card sa iyong telepono kapag nag-convert o pumasok sa pinto. Paki-ayos lamang ang angkop na liwanag ng screen.",
+"how_to_change": "Paano baguhin ang boto",
+"present_voucher": "I-present ang voucher sa iyong telepono o i-print, kasama ang iyong pasaporte/ID upang ipalit sa mga regalo para sa operator ng tour.",
+"you_must": "Dapat kang handang lumahok sa tour at ang lugar ng pagtitipon ay isinakdalan. Kung hindi ka naroon sa oras at lugar ng pagpupulong, iiwan ka at ang iyong reservation ay ituturing na hindi wasto. Maaari kang humiling ng iskedyul batay sa pahintulot ng operator ng tour at sa puwang sa araw na iyong pinili.",
+"please_note": " Mangyaring tandaan na tanging ang iyong Traveloka payment card lamang ang balido para sa pagpasok. Hindi maaaring gamitin ang mga resibo ng pagbabayad o ebidensya ng pagbabayad para sa admission.",
+"conversion": "Conversion",
+"refund_and_change": "Refund at pagbabago ng kalendaryo",
+"can_change_calendar": "Maaaring baguhin ang kalendaryo sa aking pahina ng reservation bago ang napiling petsa ng pagdating.",
+"can_be_fully": "Maaaring maipabalik ang buo",
+"it_is_only": "Tanging posible lamang na humiling ng proseso ng refund bago ang petsa ng pagpili. Tingnan ang patakaran sa refund sa ibaba para sa karagdagang impormasyon.",
+"calendar_change": "Patakaran sa Pagbabago ng Kalendaryo",
+"you_can_only": "Maaari lamang baguhin ang iyong iskedyul ng booking ng hanggang 2 beses.",
+"require_of_schedule": "Ang kinakailangan ng iskedyul ay maaaring gawin hanggang isang araw bago ang napiling petsa ng pagbisita.",
+"your_rearrangement": "Ang iyong iskedyul ng pag-aayos ay magiging epekto sa lahat ng mga bisita sa 1 code ng reservation.",
+"you_can_schedule": "Maaari mong iskedyul ang iyong reservation sa anumang araw na available sa panahon mula sa petsa ng paglabas ng voucher hanggang pagkatapos ng 14 araw mula sa petsa ng orihinal na pagmamasid mo. Paki-tandaan na maaari lamang baguhin ang kalendaryo papunta sa ibang araw kaysa sa parehong presyo o mas mababa kaysa sa iyong orihinal na reservation.",
+"the_scheduling": "Ang pag-iiskedyul ng reservation ay hindi irerefund.",
+"refund_policy": "Patakaran sa Pag-refund",
+"requirement_for_refund": "Kinakailangan para sa huling 2 araw bago ang iyong pagpili upang makatanggap ng 100% na refund.",
+"your_reservation": "Hindi irerefund ang iyong reservation kung hihiling ka ng refund ng. mas mababa sa 2 araw bago ang napiling petsa.",
+"the_final_refund": "Hindi kasama sa huling refund ang bayad sa serbisyo, kupon at/o bayad sa isang bank transfer.",
+"to_cancel_reservation": "Upang kanselahin ang iyong reservation at humiling ng refund, mangyaring bisitahin ang item sa aking reservation. Sa bahaging pamamahala ng reservation, pindutin ang refund at sundan ang proseso ng refund (magagamit sa bersyon ng aplikasyon ng Traveloka 3.18 o mas mataas o sa website ng Traveloka sa computer).",
+"term_condition": "Mga Tuntunin & Kondisyon",
+"there_is_surcharge": " May karagdagang bayad na THB 1000 para sa mga tour na operasyon sa panahon ng Bagong Taon at panahon ng Songkran. Mangyaring bayaran ang karagdagang bayad nang direkta sa operator ng tour.",
+"all_travelers": "Ang lahat ng mga manlalakbay ay dapat magdala ng pagkakakilanlan (o pasaporte) sa lahat ng oras.",
+"child_ticket": "Ang mga tiket ng bata ay naaangkop sa mga bata mula 4 hanggang 11 taong gulang o 120cm o mas mababa ang taas.",
+"adult_ticket": "Ang mga tiket ng adult ay naaangkop sa mga tao mula 12 hanggang 60 taong gulang o higit sa 120cm ang taas.",
+"infants_under": "Ang mga sanggol na wala pang 1 taon, mga nakatatanda na higit sa 60 taon, at mga alagang hayop ay hindi pinapayagan sa tour.",
+"guest_with_high": "Ang mga bisita na may mataas na presyon ng dugo, sakit sa puso, pagbubuntis, hika, at sakit sa buto o orthopedic ay hindi pinapayagan na lumahok sa tour na ito.",
+"you_are_allergic": "Kung ikaw ay mayroong allergy sa partikular na pagkain, mangyaring ipaalam sa operator bago maglakbay.",
+"this_activity": "Ang aktibidad na ito ay hindi angkop para sa mga bata na wala pang 2 taong gulang, buntis na kababaihan, o mga taong may kondisyon sa medikal o kapansanan.",
+"foreigners_must": "Ang mga dayuhan ay dapat mag-apply para sa isang E-Visa sa pamamagitan ng  at magsumite ng aprobado visa sa ahensya 7 araw bago ang petsa ng paglalakbay.",
+"you_plan_to": "Kung plano mong maglakbay sa panahon ng isang malaking pista, dapat kang mag-book ng tiket nang hindi bababa sa isang buwan bago.",
+"itineraries_time": "Ang mga itineraryo at oras sa itaas ay mga palasak at maaaring amyendahan nang walang abiso upang tugmaan ang lokal na alon at kondisyon ng panahon."
+
 }
