--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -242,7 +242,7 @@
   "RENT": "เช่า",
   "BUY": "ซื้อ",
   "TOUR": "ทัวร์",
-  "tour_post":"ทัวร์",
+  "tour_post": "ทัวร์",
   "wish_list": "รายการสิ่งที่ต้องการ",
   "change_language_success": "เปลี่ยนภาษาสำเร็จ!",
   "username_or_email": "ชื่อผู้ใช้หรืออีเมล",
@@ -283,79 +283,111 @@
   "link_tiktok": "ลิงก์ทิกท็อก",
   "name": "ชื่อ",
   "tour_by_topic": "ทัวร์ตามหัวข้อ",
-"emigrate": "ย้ายถิ่นฐาน",
-"world": "โลก",
-"find_recommend_tour": "ค้นหาทัวร์แนะนำ",
-"package_tour_aboard": "ทัวร์แพ็คเกจต่างประเทศ",
-"discover_package_family": "ค้นพบแพ็คเกจทัวร์สำหรับครอบครัว 5D4D !!",
-"themed_tour": "ทัวร์ตามหัวข้อ",
-"discover_tour_youlove": "ค้นพบประเภททัวร์ที่คุณรัก",
-"travel_around_world": "เดินทางรอบโลก",
-"discover_more_tour": "ค้นพบทัวร์เพิ่มเติม",
-"the_place_discovery": "สถานที่มีค่ามากที่ควรค้นพบ",
-"dosmestic_destination": "ปลายทางในประเทศ",
-"international_destination": "ปลายทางระหว่างประเทศ",
-"watch_the_most": "รับชมวิดีโอที่สดใสที่สุดเกี่ยวกับสถานที่ที่คุณต้องการเดินทาง",
-"lastest_tour": "วันทัวร์ล่าสุด",
-"hour": "ชั่วโมง",
-"ticket_option": "ตัวเลือกตั๋ว",
-"see_detail": "ดูรายละเอียด",
-"easy_refund": "คืนเงินง่าย",
-"easy_reschedule": "เปลี่ยนวันเวลาได้ง่าย",
-"select_ticket": "เลือกตั๋ว",
-"trip_highlight": "จุดเด่นของทริป",
-"tour_schedule": "กำหนดการทัวร์",
-"find_tour": "ค้นหาทัวร์",
-"best_price_from": "ราคาที่ดีที่สุดจาก",
-"room_information": "ข้อมูลห้องพัก",
-"little_convenient": "ไม่สะดวกน้อย",
-"price_detail": "รายละเอียดราคา",
-"room_rate": "อัตราห้องพัก",
-"taxes_and_fees": "ภาษีและค่าธรรมเนียม",
-"total": "รวมทั้งสิ้น",
-"request_to_book": "ขอจอง",
-"room_detail": "รายละเอียดห้องพัก",
-"book": "จอง",
-"contact_detail": "รายละเอียดการติดต่อ",
-"choose_time": "เลือกเวลา",
-"use_coupon": "ใช้คูปอง",
-"adult": "ผู้ใหญ่",
-"children": "เด็ก",
-"add_number_guest": "เพิ่มจำนวนแขก",
-"adult_year_old": "ผู้ใหญ่ (12-60 ปี)",
-"children_year_old": "เด็ก (4-11 ปี)",
-"things_need_to_know": "สิ่งที่คุณต้องรู้",
-"inexperienced": "ไม่มีประสบการณ์",
-"inseparable": "ไม่สามารถแยกได้",
-"no_reservation": "ไม่มีการจอง",
-"include_addition": "รวมค่าธรรมเนียมเพิ่มเติม",
-"price_include": "ราคาที่รวมแล้ว",
-"carriage": "การเดินทาง",
-"round_trip": "รถรับส่งไป-กลับ",
-"high_speed": "รถไฟความเร็วสูง",
-"tour_guide": "ไกด์ทัวร์",
-"thai_english": "ไกด์ทัวร์พูดภาษาไทย - อังกฤษ",
-"meal": "อาหาร",
-"light_breakfast": "อาหารเช้าเบา ๆ",
-"lunch_option": "รูปแบบอาหารกลางวันที่เลือกได้ (มีตัวเลือกมังสวิรัติ)",
-"service_supple": "บริการ/เสริม",
-"divine_mask": "หน้ากากดำน้ำและเสื้อชูชีพ",
-"admission_fee": "ค่าเข้าชม",
-"insurance_provide": "ประกันภัยที่ให้โดยผู้ประกอบการ",
-"soft_drink": "เครื่องดื่มอ่อน",
-"seasonal_fruits": "ผลไม้ฤดูกาล",
-"cake_and_snack": "ราคาเค้กและของว่างไม่รวม",
-"other_personal": "ค่าใช้จ่ายส่วนบุคคลอื่น ๆ",
-"tip": "เคล็ดลับ",
-"voucher_validity": "ความถูกต้องของบัตร",
-"use_selected_date": "ใช้ในวันที่เลือก",
-"valid_normally": "สมบูรณ์ทุกวันโดยปกติ",
-"valid_holiday": "สมบูรณ์ในวันหยุดทุกวัน",
-"conversion_method": "วิธีการแปลง",
-"do_not_need_book": "คุณไม่จำเป็นต้องจองก่อนมา",
-"input_directly": "ป้อนโดยตรง",
-"after_confirming": "หลังจากยืนยันการจองแล้ว คุณสามารถดูบัตรบริการได้ในหน้าการจองของฉันหรือทางอีเมล",
-"when_coming": "เมื่อมาถึง แค่ส่งบริการทางโทรศัพท์ให้พนักงานที่ประตูแล้วเสร็จ",
-"no_need_print_card": "ไม่จำเป็นต้องพิมพ์บัตรชำระเงิน",
-"just_present_electronic": "เพียงแค่นำบัตร/บัตรชำระเงินอิเล็กทรอนิกส์บนโทรศัพท์ของคุณมาเมื่อแปลงหรือเข้าประตู โปรดปรับความสว่างของหน้าจอให้เหมาะสม"
+  "emigrate": "ย้ายถิ่นฐาน",
+  "world": "โลก",
+  "find_recommend_tour": "ค้นหาทัวร์แนะนำ",
+  "package_tour_aboard": "ทัวร์แพ็คเกจต่างประเทศ",
+  "discover_package_family": "ค้นพบแพ็คเกจทัวร์สำหรับครอบครัว 5D4D !!",
+  "themed_tour": "ทัวร์ตามหัวข้อ",
+  "discover_tour_youlove": "ค้นพบประเภททัวร์ที่คุณรัก",
+  "travel_around_world": "เดินทางรอบโลก",
+  "discover_more_tour": "ค้นพบทัวร์เพิ่มเติม",
+  "the_place_discovery": "สถานที่มีค่ามากที่ควรค้นพบ",
+  "dosmestic_destination": "ปลายทางในประเทศ",
+  "international_destination": "ปลายทางระหว่างประเทศ",
+  "watch_the_most": "รับชมวิดีโอที่สดใสที่สุดเกี่ยวกับสถานที่ที่คุณต้องการเดินทาง",
+  "lastest_tour": "วันทัวร์ล่าสุด",
+  "hour": "ชั่วโมง",
+  "ticket_option": "ตัวเลือกตั๋ว",
+  "see_detail": "ดูรายละเอียด",
+  "easy_refund": "คืนเงินง่าย",
+  "easy_reschedule": "เปลี่ยนวันเวลาได้ง่าย",
+  "select_ticket": "เลือกตั๋ว",
+  "trip_highlight": "จุดเด่นของทริป",
+  "tour_schedule": "กำหนดการทัวร์",
+  "find_tour": "ค้นหาทัวร์",
+  "best_price_from": "ราคาที่ดีที่สุดจาก",
+  "room_information": "ข้อมูลห้องพัก",
+  "little_convenient": "ไม่สะดวกน้อย",
+  "price_detail": "รายละเอียดราคา",
+  "room_rate": "อัตราห้องพัก",
+  "taxes_and_fees": "ภาษีและค่าธรรมเนียม",
+  "total": "รวมทั้งสิ้น",
+  "request_to_book": "ขอจอง",
+  "room_detail": "รายละเอียดห้องพัก",
+  "book": "จอง",
+  "contact_detail": "รายละเอียดการติดต่อ",
+  "choose_time": "เลือกเวลา",
+  "use_coupon": "ใช้คูปอง",
+  "adult": "ผู้ใหญ่",
+  "children": "เด็ก",
+  "add_number_guest": "เพิ่มจำนวนแขก",
+  "adult_year_old": "ผู้ใหญ่ (12-60 ปี)",
+  "children_year_old": "เด็ก (4-11 ปี)",
+  "things_need_to_know": "สิ่งที่คุณต้องรู้",
+  "inexperienced": "ไม่มีประสบการณ์",
+  "inseparable": "ไม่สามารถแยกได้",
+  "no_reservation": "ไม่มีการจอง",
+  "include_addition": "รวมค่าธรรมเนียมเพิ่มเติม",
+  "price_include": "ราคาที่รวมแล้ว",
+  "carriage": "การเดินทาง",
+  "round_trip": "รถรับส่งไป-กลับ",
+  "high_speed": "รถไฟความเร็วสูง",
+  "tour_guide": "ไกด์ทัวร์",
+  "thai_english": "ไกด์ทัวร์พูดภาษาไทย - อังกฤษ",
+  "meal": "อาหาร",
+  "light_breakfast": "อาหารเช้าเบา ๆ",
+  "lunch_option": "รูปแบบอาหารกลางวันที่เลือกได้ (มีตัวเลือกมังสวิรัติ)",
+  "service_supple": "บริการ/เสริม",
+  "divine_mask": "หน้ากากดำน้ำและเสื้อชูชีพ",
+  "admission_fee": "ค่าเข้าชม",
+  "insurance_provide": "ประกันภัยที่ให้โดยผู้ประกอบการ",
+  "soft_drink": "เครื่องดื่มอ่อน",
+  "seasonal_fruits": "ผลไม้ฤดูกาล",
+  "cake_and_snack": "ราคาเค้กและของว่างไม่รวม",
+  "other_personal": "ค่าใช้จ่ายส่วนบุคคลอื่น ๆ",
+  "tip": "เคล็ดลับ",
+  "voucher_validity": "ความถูกต้องของบัตร",
+  "use_selected_date": "ใช้ในวันที่เลือก",
+  "valid_normally": "สมบูรณ์ทุกวันโดยปกติ",
+  "valid_holiday": "สมบูรณ์ในวันหยุดทุกวัน",
+  "conversion_method": "วิธีการแปลง",
+  "do_not_need_book": "คุณไม่จำเป็นต้องจองก่อนมา",
+  "input_directly": "ป้อนโดยตรง",
+  "after_confirming": "หลังจากยืนยันการจองแล้ว คุณสามารถดูบัตรบริการได้ในหน้าการจองของฉันหรือทางอีเมล",
+  "when_coming": "เมื่อมาถึง แค่ส่งบริการทางโทรศัพท์ให้พนักงานที่ประตูแล้วเสร็จ",
+  "no_need_print_card": "ไม่จำเป็นต้องพิมพ์บัตรชำระเงิน",
+  "just_present_electronic": "เพียงแค่นำบัตร/บัตรชำระเงินอิเล็กทรอนิกส์บนโทรศัพท์ของคุณมาเมื่อแปลงหรือเข้าประตู โปรดปรับความสว่างของหน้าจอให้เหมาะสม",
+  "how_to_change": "วิธีการเปลี่ยนแปลงคะแนนเสียง",
+  "present_voucher": "นำบัตรกำนัลที่คุณได้รับบนโทรศัพท์หรือพิมพ์ออกมาพร้อมกับหนังสือเดินทาง/บัตรประจำตัวเพื่อแลกของขวัญกับผู้ประกอบการทัวร์",
+  "you_must": "คุณต้องพร้อมที่จะเข้าร่วมทัวร์และสถานที่รวมกันได้ตามที่กำหนดไว้ หากคุณไม่ปรากฎตัวในเวลาและสถานที่ประชุม คุณจะถูกทิ้งไว้และการจองของคุณจะถูกพิจารณาว่าเป็นโมฆะ คุณสามารถขอตารางเวลาตามการอนุมัติของผู้ประกอบการทัวร์และพื้นที่ว่างในวันที่คุณเลือกได้",
+  "please_note": "โปรดทราบว่าเฉพาะบัตรชำระเงิน Traveloka ของคุณเท่านั้นที่สามารถใช้เข้าไป ใบเสร็จการชำระเงินหรือหลักฐานการชำระเงินไม่สามารถใช้เข้าไปได้",
+  "conversion": "การเปลี่ยนแปลง",
+  "refund_and_change": "การคืนเงินและเปลี่ยนวัน",
+  "can_change_calendar": "สามารถเปลี่ยนวันที่ในหน้าจอจองของฉันก่อนวันที่เดินทางที่เลือก",
+  "can_be_fully": "สามารถขอคืนเงินครบถ้วน",
+  "it_is_only": "สามารถขอร้องคืนเงินก่อนวันที่เลือกได้เท่านั้น ดูนโยบายการคืนเงินด้านล่างสำหรับข้อมูลเพิ่มเติม",
+  "calendar_change": "นโยบายการเปลี่ยนวันที่",
+  "you_can_only": "คุณสามารถเปลี่ยนตารางการจองของคุณได้เพียง 2 ครั้งเท่านั้น",
+  "require_of_schedule": "ต้องการตารางเวลาสามารถทำได้ก่อนวันที่เดินทางที่เลือกได้ถึง 1 วัน",
+  "your_rearrangement": "ตารางการจัดเรียงของคุณจะใช้บัตรจองเหล่านี้ทั้งหมด",
+  "you_can_schedule": "คุณสามารถกำหนดตารางการจองของคุณให้เป็นวันใดก็ได้ภายในช่วงเวลาตั้งแต่วันที่ออกบัตรกำนัลจนถึง 14 วันหลังจากวันที่เดินทางเดิมของคุณ โปรดทราบว่าคุณสามารถเปลี่ยนวันที่ได้เพียงวันใดก็ได้ที่มีราคาเท่ากับหรือต่ำกว่าการจองเดิมของคุณเท่านั้น",
+  "the_scheduling": "การจองตารางเวลาจะไม่ได้รับการคืนเงิน",
+  "refund_policy": "นโยบายการคืนเงิน",
+  "requirement_for_refund": "ต้องการให้ล่าสุด 2 วันก่อนที่คุณจะเลือกได้รับเงินคืน 100%",
+  "your_reservation": "การจองของคุณจะไม่ได้รับการคืนเงินหากคุณขอเงินคืนน้อยกว่า 2 วันก่อนวันที่เลือกไว้",
+  "the_final_refund": "การคืนเงินครั้งสุดท้ายจะไม่รวมค่าบริการ คูปอง และ/หรือค่าธรรมเนียมการโอนเงินผ่านธนาคารเดียว",
+  "to_cancel_reservation": "เพื่อยกเลิกการจองของคุณและขอเงินคืน โปรดเยี่ยมชมรายการจองของฉัน ในส่วนการจัดการการจอง แตะที่เงินคืนและปฏิบัติตามกระบวนการการคืนเงิน (ที่มีให้ในเวอ ร์ชัน Traveloka รุ่น 3.18 หรือสูงกว่าหรือเว็บไซต์ Traveloka บนคอมพิวเตอร์)",
+  "term_condition": "ข้อกำหนดและเงื่อนไข",
+  "there_is_surcharge": "มีค่าธรรมเนียมเพิ่มเติม 1,000 บาทสำหรับทัวร์ที่ดำเนินการในช่วงเวลาวันปีใหม่และวันสงกรานต์ โปรดชำระค่าธรรมเนียมเพิ่มเติมโดยตรงกับผู้ประกอบการทัวร์",
+  "all_travelers": "นักเดินทางทุกคนต้องนำบัตรประจำตัว (หรือหนังสือเดินทาง) พร้อมด้วยตนเองตลอดเวลา",
+  "child_ticket": "บัตรเด็กใช้สำหรับเด็กอายุ 4 ถึง 11 ปีหรือสูงไม่เกิน 120 เซนติเมตร",
+  "adult_ticket": "บัตรผู้ใหญ่ใช้สำหรับผู้ที่อายุ 12 ถึง 60 ปีหรือสูงกว่า 120 เซนติเมตร",
+  "infants_under": "ทารกอายุต่ำกว่า 1 ปี ผู้สูงอายุมากกว่า 60 ปี และสัตว์เลี้ยงไม่ได้รับอนุญาตให้เข้าร่วมทัวร์",
+  "guest_with_high": "แขนและผู้ป่วยที่มีโรคความดันโลหิตสูง โรคหัวใจ ครรภ์ หอบหืด และโรคกระดูกหรือกระดูกข้อไม่ได้รับอนุญาตให้เข้าร่วมทัวร์นี้",
+  "you_are_allergic": "หากคุณแพ้อาหารบางอย่าง โปรดแจ้งให้ผู้ประกอบการทราบก่อนการเดินทาง",
+  "this_activity": "กิจกรรมนี้ไม่เหมาะสำหรับเด็กอายุต่ำกว่า 2 ปี หญิงตั้งครรภ์ หรือผู้ที่มีภาวะสุขภาพหรือความพิการ",
+  "foreigners_must": "ชาวต่างชาติต้องยื่นขอวีซ่าอี-วีซ่าผ่าน  และส่งวีซ่าที่ได้รับการอนุมัติให้กับหน่วยงาน 7 วันก่อนวันเดินทาง",
+  "you_plan_to": "หากคุณวางแผนที่จะเดินทางในช่วงงานเทศกาลใหญ่ คุณควรจองตั๋วอย่างน้อยก่อนอาทิตย์ล่วงหน้า",
+  "itineraries_time": "สิ่งที่ระบุในแผนการเดินทางและเวลาข้างต้นเป็นเพียงประมาณ และอาจมีการแก้ไขโดยไม่ต้องแจ้งให้ทราบเพื่อเหมาะกับระดับน้ำท้องถิ่นและสภาพอากาศ"
 }
