--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -357,5 +357,37 @@
 "after_confirming": "Sau khi xác nhận đặt chỗ, bạn có thể xem phiếu dịch vụ trên trang đặt chỗ của tôi hoặc qua email",
 "when_coming": "Khi đến, chỉ cần trình diện phiếu dịch vụ trên điện thoại cho nhân viên ở cửa để hoàn tất",
 "no_need_print_card": "Không cần in thẻ thanh toán",
-"just_present_electronic": "Chỉ cần trình diện vé điện tử/thẻ thanh toán trên điện thoại khi chuyển đổi hoặc khi nhập cửa. Vui lòng điều chỉnh độ sáng màn hình phù hợp."
+"just_present_electronic": "Chỉ cần trình diện vé điện tử/thẻ thanh toán trên điện thoại khi chuyển đổi hoặc khi nhập cửa. Vui lòng điều chỉnh độ sáng màn hình phù hợp.",
+"how_to_change": "Cách thay đổi phiếu bầu",
+"present_voucher": "Trình voucher trên điện thoại hoặc in ra, cùng với hộ chiếu/thẻ căn cước của bạn để đổi quà cho nhà tổ chức tour.",
+"you_must": "Bạn phải sẵn lòng tham gia tour và tại điểm tụ tập đã được lên lịch trước. Nếu bạn không có mặt đúng giờ và địa điểm gặp gỡ, bạn sẽ bị bỏ lại và đặt chỗ của bạn sẽ bị coi là không hợp lệ. Bạn có thể yêu cầu một lịch trình dựa trên sự phê duyệt của nhà tổ chức tour và không gian trên ngày bạn đã chọn.",
+"please_note": " Vui lòng lưu ý rằng chỉ thẻ thanh toán của Traveloka của bạn mới được chấp nhận để vào cửa. Biên nhận thanh toán hoặc bằng chứng thanh toán không thể được sử dụng để vào cửa.",
+"conversion": "Chuyển đổi",
+"refund_and_change": "Hoàn tiền và thay đổi lịch",
+"can_change_calendar": "Có thể thay đổi lịch trong trang đặt chỗ của tôi trước ngày đến được chọn.",
+"can_be_fully": "Có thể được hoàn trả hoàn toàn",
+"it_is_only": " Chỉ có thể yêu cầu quá trình hoàn tiền trước ngày chọn. Xem chính sách hoàn tiền bên dưới để biết thêm thông tin.",
+"calendar_change": "Chính sách Thay đổi Lịch",
+"you_can_only": "Bạn chỉ có thể thay đổi lịch đặt phòng của mình tối đa 2 lần.",
+"require_of_schedule": "Yêu cầu lịch có thể được thực hiện trước 1 ngày trước ngày tham quan được chọn.",
+"your_rearrangement": "Lịch sắp xếp của bạn sẽ áp dụng cho tất cả khách trong 1 mã đặt chỗ.",
+"you_can_schedule": "Bạn có thể lên lịch cho đặt phòng của mình vào bất kỳ ngày nào có sẵn trong khoảng thời gian từ ngày phát hành voucher cho đến sau 14 ngày kể từ ngày đi tham quan ban đầu của bạn. Lưu ý rằng bạn chỉ có thể thay đổi lịch sang một ngày khác với giá bằng hoặc thấp hơn so với đặt phòng ban đầu của bạn.",
+"the_scheduling": "Lịch trình đặt phòng sẽ không được hoàn trả.",
+"refund_policy": "Chính sách hoàn tiền",
+"requirement_for_refund": "Yêu cầu phải trước ít nhất 2 ngày trước khi bạn chọn để nhận 100% hoàn tiền.",
+"your_reservation": "Đặt phòng của bạn sẽ không được hoàn trả nếu bạn yêu cầu hoàn tiền ít hơn 2 ngày trước ngày được chọn.",
+"the_final_refund": "Hoàn tiền cuối cùng sẽ không bao gồm phí dịch vụ, phiếu giảm giá và/hoặc phí chuyển khoản ngân hàng đơn lẻ.",
+"to_cancel_reservation": "Để hủy đặt phòng của bạn và yêu cầu hoàn tiền, vui lòng truy cập mục đặt phòng của tôi. Trong phần quản lý đặt phòng, chạm vào hoàn tiền và tuân thủ quy trình hoàn tiền (có sẵn trên ứng dụng Traveloka phiên bản 3.18 trở lên hoặc trên trang web Traveloka trên máy tính).",
+"term_condition": "Điều khoản và điều kiện",
+"there_is_surcharge": " Có một khoản phụ phí là 1000 baht cho các tour hoạt động trong thời kỳ Năm mới và dịp Songkran. Vui lòng thanh toán phí bổ sung trực tiếp cho nhà tổ chức tour.",
+"all_travelers": "Tất cả hành khách phải mang theo giấy tờ tùy thân (hoặc hộ chiếu) vào bất kỳ lúc nào.",
+"child_ticket": "Vé trẻ em áp dụng cho trẻ từ 4 đến 11 tuổi hoặc cao dưới 120cm.",
+"adult_ticket": "Vé người lớn áp dụng cho người từ 12 đến 60 tuổi hoặc cao trên 120cm.",
+"infants_under": "Trẻ sơ sinh dưới 1 tuổi, người cao tuổi trên 60 tuổi và thú cưng không được phép tham gia tour.",
+"guest_with_high": "Khách hàng có huyết áp cao, bệnh tim, thai kỳ, hen suyễn và các bệnh xương hoặc bệnh lý cơ sở không được phép tham gia tour này.",
+"you_are_allergic": "Nếu bạn dị ứng với một loại thực phẩm cụ thể nào đó, vui lòng thông báo cho nhà tổ chức trước khi đi du lịch.",
+"this_activity": "Hoạt động này không phù hợp cho trẻ em dưới 2 tuổi, phụ nữ mang thai, hoặc những người có điều kiện y tế hoặc khuyết tật.",
+"foreigners_must": "Người nước ngoài phải đăng ký Visa điện tử qua  và gửi visa được phê duyệt đến công ty 7 ngày trước ngày đi du lịch.",
+"you_plan_to": "Nếu bạn dự định đi du lịch trong một lễ hội lớn, bạn nên đặt vé ít nhất một tháng trước.",
+"itineraries_time": "Lịch trình và thời gian trên chỉ là ước tính và có thể được điều chỉnh mà không cần thông báo trước để phù hợp với thủy triều và điều kiện thời tiết địa phương."
 }
