--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -353,5 +353,37 @@
 "after_confirming": "确认预订后，您可以在我的预订页面或通过电子邮件查看服务凭证",
 "when_coming": "到达时，只需在电话上提交服务给入口处的工作人员",
 "no_need_print_card": "无需打印付款卡",
-"just_present_electronic": "当转换或进入门时，只需在手机上展示电子票证/付款卡。请调整适当的屏幕亮度。"
+"just_present_electronic": "当转换或进入门时，只需在手机上展示电子票证/付款卡。请调整适当的屏幕亮度。",
+"how_to_change": "如何更改投票",
+"present_voucher": "在您的手机上或打印出礼券，同时携带您的护照/身份证与旅游运营商交换礼物。",
+"you_must": "您必须愿意参加旅行并按计划前往集合地点。如果您未能在会议的时间和地点出现，您将被留下，您的预订将被视为无效。您可以根据旅游运营商的批准和您选择的日期上的空间要求一个时间表。",
+"please_note": "请注意，只有您的Traveloka付款卡才能用于入场。支付收据或支付凭证不能用于入场。",
+"conversion": "兑换",
+"refund_and_change": "退款和更改日历",
+"can_change_calendar": "可在我的预订页面上在选定的到达日期之前更改日历。",
+"can_be_fully": "可以全额退款",
+"it_is_only": "只有在选择日期之前才能请求退款流程。有关更多信息，请参阅下面的退款政策。",
+"calendar_change": "日历更改政策",
+"you_can_only": "您只能最多更改两次您的预订时间表。",
+"require_of_schedule": "可在选定的访问日期前一天完成时间表要求。",
+"your_rearrangement": "您的重新安排时间表将适用于1个预订代码中的所有客人。",
+"you_can_schedule": "您可以将预订安排到从礼券发放日期起至原始观光日期之后14天的任何日期。请注意，您只能将日历更改为比您的原始预订价格更低或相同的另一天。",
+"the_scheduling": "预订日程安排将不予退款。",
+"refund_policy": "退款政策",
+"requirement_for_refund": "要求在您选择的最晚日期前2天获得100%的退款。",
+"your_reservation": "如果您要求在选定日期之前少于2天退订，则您的预订将不予退款。",
+"the_final_refund": "最终退款不包括服务费、优惠券和/或单笔银行转账费。",
+"to_cancel_reservation": "要取消预订并要求退款，请访问我的预订项目。在预订管理部分，点击退款并按照退款流程操作（适用于Traveloka应用程序版本3.18或更高版本，或Traveloka网站上的电脑）。",
+"term_condition": "条款与条件",
+"there_is_surcharge": "在新年期间和泼水节期间运营的旅游中，将收取1000泰铢的附加费。请直接向旅游运营商支付额外费用。",
+"all_travelers": "所有旅客必须随时携带身份证件（或护照）。",
+"child_ticket": "儿童票适用于4至11岁或身高120厘米以下的儿童。",
+"adult_ticket": "成人票适用于12至60岁或身高超过120厘米的人。",
+"infants_under": "1岁以下婴儿、60岁以上的老年人和宠物不允许参加旅游。",
+"guest_with_high": "患有高血压、心脏病、怀孕、哮喘以及骨骼或骨科疾病的客人不得参加此次旅行。",
+"you_are_allergic": "如果您对某种特定食物过敏，请在旅行前告知运营商。",
+"this_activity": "此活动不适合2岁以下的儿童、孕妇或有医疗条件或残疾的人。",
+"foreigners_must": "外国人必须通过申请电子签证，并在出行日期前7天向代理提交批准的签证。",
+"you_plan_to": "如果您计划在重要节日期间旅行，您应该至少提前一个月预订门票。",
+"itineraries_time": "以上行程和时间仅供参考，可能会根据当地潮汐和天气条件进行调整，而无需事先通知。"
 }
