--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -253,7 +253,7 @@
   "main_currency": "主要货币",
   "distance_to_city": "距离市中心的距离",
   "number_of_floors": "楼层数",
-  "estate_facilities": "房产设施",
+  "property_facilities":"物业设施",
   "estate_contact": "房产联系方式",
   "rooms": "房间",
   "estate_photo": "房产照片",
