--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -260,7 +260,7 @@
     "main_currency":"Main Currency",
     "distance_to_city":"Distance to City Center",
     "number_of_floors":"Number of Floors",
-    "estate_facilities":"Estate facilities",
+    "property_facilities":"Property Facilities",
     "estate_contact":"Estate contact info",
     "rooms":"Rooms",
     "estate_photo":"Estate Photos",
