--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -257,7 +257,7 @@
   "main_currency": "Mata Wang Utama",
   "distance_to_city": "Jarak ke Pusat Bandar",
   "number_of_floors": "Bilangan Tingkat",
-  "estate_facilities": "Kemudahan Harta Tanah",
+  "property_facilities": "Kemudahan Harta",
   "estate_contact": "Maklumat Hubungan Harta Tanah",
   "rooms": "Bilik",
   "estate_photo": "Gambar Harta Tanah",
