--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -252,7 +252,7 @@
   "main_currency": "Pangunahing Pera",
   "distance_to_city": "Distansya sa Sentro ng Lungsod",
   "number_of_floors": "Bilang ng mga Palapag",
-  "estate_facilities": "Mga Pasilidad ng Estate",
+  "property_facilities": "Mga Pasilidad ng Ari-arian",
   "estate_contact": "Impormasyon ng Pakikipag-ugnayan sa Estate",
   "rooms": "Mga Kuwarto",
   "estate_photo": "Mga Larawan ng Estate",
