--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -257,7 +257,7 @@
   "main_currency": "Đơn Vị Tiền Tệ Chính",
   "distance_to_city": "Khoảng Cách Đến Trung Tâm Thành Phố",
   "number_of_floors": "Số Tầng",
-  "estate_facilities": "Tiện Ích Bất Động Sản",
+  "property_facilities": "Cơ sở vật chất",
   "estate_contact": "Thông Tin Liên Hệ Bất Động Sản",
   "rooms": "Các Phòng",
   "estate_photo": "Ảnh Bất Động Sản",
